Bug 311258 - Marble shows a cursor on the N900
Summary: Marble shows a cursor on the N900
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.3 (KDE 4.8)
Platform: Maemo 5 Linux
: NOR normal
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-06 15:36 UTC by Bernhard Beschow
Modified: 2012-12-10 18:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: KDE/4.9.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2012-12-06 15:36:24 UTC
Marble shows a cursor on the N900, which is unusual for the platform and makes the map looks cluttered.

Reproducible: Always

Steps to Reproduce:
1. Start Marble
2. Pan the map
Actual Results:  
Marble shows a cursor.

Expected Results:  
No cursor should be shown.

When starting up, Marble does not yet show a cursor. After the map is panned, a cursor is shown.
Comment 1 Bernhard Beschow 2012-12-06 15:38:15 UTC
Git commit 00e1f8c987125a9b2b6caba63a994b785838e13c by Bernhard Beschow.
Committed on 06/12/2012 at 14:12.
Pushed by beschow into branch 'master'.

don't set a cursor on Maemo 5

Widgets on Maemo 5 don't show a cursor by default. Marble should respect this because applications on the N900 usually don't show a cursor.

M  +2    -0    src/lib/MarbleWidgetInputHandler.cpp

http://commits.kde.org/marble/00e1f8c987125a9b2b6caba63a994b785838e13c
Comment 2 Bernhard Beschow 2012-12-07 11:04:08 UTC
Git commit fac24734047e593c804fbdbb1b02bc9a2702af7b by Bernhard Beschow.
Committed on 06/12/2012 at 14:12.
Pushed by beschow into branch 'KDE/4.9'.

don't set a cursor on Maemo 5

Widgets on Maemo 5 don't show a cursor by default. Marble should respect this because applications on the N900 usually don't show a cursor.
FIXED-IN: KDE/4.9.5
(cherry picked from commit 00e1f8c987125a9b2b6caba63a994b785838e13c)

M  +2    -0    src/lib/MarbleWidgetInputHandler.cpp

http://commits.kde.org/marble/fac24734047e593c804fbdbb1b02bc9a2702af7b
Comment 3 Dennis Nienhüser 2012-12-10 18:47:59 UTC
Git commit 65579646d21282082dbc290a93ef2af36cc521c9 by Dennis Nienhüser, on behalf of Bernhard Beschow.
Committed on 06/12/2012 at 14:12.
Pushed by nienhueser into branch 'kitchen'.

don't set a cursor on Maemo 5

Widgets on Maemo 5 don't show a cursor by default. Marble should respect this because applications on the N900 usually don't show a cursor.

M  +2    -0    src/lib/MarbleWidgetInputHandler.cpp

http://commits.kde.org/marble/65579646d21282082dbc290a93ef2af36cc521c9