don't set a cursor on Maemo 5

Widgets on Maemo 5 don't show a cursor by default. Marble should respect this because applications on the N900 usually don't show a cursor.

BUG: 311258
FIXED-IN: KDE/4.9.5
(cherry picked from commit 00e1f8c987125a9b2b6caba63a994b785838e13c)